tests/should-fail/multiport/illegal-patterns.fk
-- #desc   Use of illegal command pattern (see more in comments below)
-- #return command ask.2 not found in adjustments of port <Reader Int , Reader Int>Int (line 6 , column 16)

interface Reader X = ask: X

constHandler: {<Reader Int, Reader Int>Int -> Int}
constHandler x = x
constHandler <ask.0 -> k> = constHandler (k 3)
constHandler <ask.2 -> k> = constHandler (k 7) -- <- This pattern should be illegal

myreader: {[Reader Int, Reader Int]Int}
myreader! = ask! + (<Reader(1)> ask!)

main: {[Console]Int}
main! = constHandler myreader!
